fix(ui): fix DynamicEdgeConfig overflow bug

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -215,6 +215,10 @@
   position: static;
   z-index: 100;
 
+  .edge-config-container {
+    position: relative;
+  }
+
   .form-input-label {
     margin-bottom: layout.$spacing-03;
   }
